# Jeff

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: run_tests.sh
src/: app.rs  editor.rs  enums.rs  fileio.rs  items.rs  jeff_path.rs  jot_path.rs  main.rs  prelude.rs  traits.rs  utils.rs
src/items/: collection.rs  folder.rs  item.rs  mod.rs  note.rs  vault.rs
src/output/: error.rs  jeff_display.rs  jot_display.rs  message.rs  mod.rs
src/state/: args.rs  config.rs  data.rs  mod.rs  vaults.rs
src/state/vaults/: mod.rs  vault.rs
src/tests/: mod.rs  utils.rs
