[package]
name = "jt"
version = "0.2.0"
edition = "2021"
authors = ["devinleamy <devinleamy@gmail.com>", "araekiel <kumarshashwatsri@gmail.com>"]
license = "MIT"
description = "⚡Rapid note management for the terminal."
readme = "README.md"
homepage = "https://github.com/devinleamy/jot"
repository = "https://github.com/DevinLeamy/jot"
keywords = ["cli", "notes", "note-management", "obsidian"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
toml = "0.5.9"
clap = { version = "3.2.15", features = ["derive"] }
directories = "4.0.1"
chrono = "0.4.22"
anyhow = "1.0"
colored = "2"
lazy_static = "1.4.0"
dialoguer = "0.10.2"
skim = "0.10.1"

[features]
default = ["stmt_expr_attributes"]
stmt_expr_attributes = []
